<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GithubUser</string>
    <string name="github">Github.</string>
    <string name="letter_U">U</string>
    <string name="letter_S">S</string>
    <string name="letter_E">E</string>
    <string name="letter_R">R</string>
    <string name="User_name">User Name</string>
    <string name="repos">Repositories : 10</string>
    <string name="testing">testing</string>
    <string name="following">following</string>
    <string name="follower">follower</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_user">-</string>
    <string name="following_count">-</string>
    <string name="following_label">FOLLOWING</string>
    <string name="follower_count">-</string>
    <string name="follower_label">FOLLOWER</string>
    <string name="repo_label">REPO</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="gist">GIST</string>
    <string name="link_github">Followers %d</string>
    <string name="favourite">love</string>
    <string name="favorite_user">Favorite User</string>
    <string name="settings">Settings</string>
    <string name="mati_lampu">Mati Lampu</string>
    <string name="fav_user_title">List Favorite User</string>
    <string name="settings_title">Theme Settings</string>
    <string name="detail_title">User Detail</string>
</resources>