<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Ui.DetailActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_detail"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.01"
                tools:srcCompat="@drawable/github" />

            <TextView
                android:id="@+id/namaUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:letterSpacing="0.02"
                android:text="@string/nama_user"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_detail"
                app:layout_constraintStart_toStartOf="@+id/img_detail"
                app:layout_constraintTop_toBottomOf="@+id/img_detail"
                tools:ignore="VisualLintOverlap" />

            <TextView
                android:id="@+id/otherNamaUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/nama_user"
                app:layout_constraintEnd_toEndOf="@+id/namaUser"
                app:layout_constraintStart_toStartOf="@+id/namaUser"
                app:layout_constraintTop_toBottomOf="@+id/namaUser"
                tools:ignore="VisualLintOverlap" />

            <TextView
                android:id="@+id/followerCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/following_count"
                app:layout_constraintEnd_toStartOf="@+id/followingCount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/otherNamaUser" />

            <TextView
                android:id="@+id/followerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/follower_label"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/followerCount"
                app:layout_constraintStart_toStartOf="@+id/followerCount"
                app:layout_constraintTop_toBottomOf="@+id/followerCount" />

            <TextView
                android:id="@+id/followingCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:text="@string/follower_count"
                app:layout_constraintEnd_toStartOf="@+id/repoCount"
                app:layout_constraintStart_toEndOf="@id/followerCount"
                app:layout_constraintTop_toBottomOf="@+id/otherNamaUser" />

            <TextView
                android:id="@+id/followingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/following_label"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/followingCount"
                app:layout_constraintStart_toStartOf="@+id/followingCount"
                app:layout_constraintTop_toBottomOf="@+id/followingCount" />

            <TextView
                android:id="@+id/repoCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/follower_count"
                app:layout_constraintEnd_toStartOf="@+id/gistCount"
                app:layout_constraintStart_toEndOf="@id/followingCount"
                app:layout_constraintTop_toBottomOf="@+id/otherNamaUser" />

            <TextView
                android:id="@+id/repoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/repo_label"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/repoCount"
                app:layout_constraintStart_toStartOf="@+id/repoCount"
                app:layout_constraintTop_toBottomOf="@+id/repoCount" />

            <TextView
                android:id="@+id/gistCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/follower_count"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/repoCount"
                app:layout_constraintTop_toBottomOf="@+id/otherNamaUser" />

            <TextView
                android:id="@+id/gistLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/gist"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/gistCount"
                app:layout_constraintStart_toStartOf="@+id/gistCount"
                app:layout_constraintTop_toBottomOf="@+id/gistCount" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/tab_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/followingLabel" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabs" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/love_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/favourite"
            android:foregroundGravity="bottom"
            app:fabSize="normal"
            app:layout_anchor="@id/viewPager"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@drawable/ic_fav" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</ScrollView>